--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "GainzClub",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
@@ -22,7 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prod-release": "npm version patch && npm run build && git relstart"
   },
   "eslintConfig": {
     "extends": "react-app"
