--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prod-release": "npm version patch && npm run build && git relstart"
   },
   "eslintConfig": {
     "extends": "react-app"
