--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "minor-prod-release": "git repo-update && npm version minor && && git relstart $npm_package_version && git relfinish",
-    "major-prod-release": "git repo-update && npm version major && && git relstart $npm_package_version && git relfinish"
+    "minor-prod-release": "git repo-update && npm version minor && git relstart $npm_package_version && git relfinish",
+    "major-prod-release": "git repo-update && npm version major && git relstart $npm_package_version && git relfinish"
   },
   "eslintConfig": {
     "extends": "react-app"
