--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "minor-prod-release": "git repo-update && npm version minor && git relstart -m && git relfinish",
-    "major-prod-release": "git repo-update && npm version major && git relstart -M && git relfinish"
+    "minor-prod-release": "git repo-update && npm version minor && git flow release start ${npm_package_version} && git flow release start ${npm_package_version} && git push origin --tags",
+    "major-prod-release": "git repo-update && npm version major && git flow release start ${npm_package_version} && git flow release start ${npm_package_version} && git push origin --tags"
   },
   "eslintConfig": {
     "extends": "react-app"
