--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "minor-prod-release": "git repo-update && npm version minor && git com \"release package update\" && git push && git flow release start ${npm_package_version} && git flow release finish ${npm_package_version} && git push origin --tags",
+    "minor-version-inc": "git repo-update && npm version minor && git com \"release package update\" && npm run minor-prod-release",
+    "minor-prod-release": "git push && git flow release start ${npm_package_version} && git flow release finish ${npm_package_version} && git push origin --tags",
     "major-prod-release": "git repo-update && npm version major && git com \"release package update\" && git push && git flow release start ${npm_package_version} && git flow release finish ${npm_package_version} && git push origin --tags"
   },
   "eslintConfig": {
